--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "dat.gui": "^0.7.6",
     "eslint-config-airbnb": "^18.0.1",
-    "three": "^0.113.2"
+    "three": "^0.113.2",
+    "three-orbitcontrols": "^2.110.3"
   }
 }
