--- a/.eslintrc
+++ b/.eslintrc
@@ -2,12 +2,62 @@
     "extends": "airbnb",
     "parser": "babel-eslint",
     "parserOptions": {
-        "sourceType": "module",
-        "allowImportExportEverywhere": true
+      "sourceType": "module",
+      "allowImportExportEverywhere": true
     },
-    "rules": {},
+    "rules": {
+      "no-underscore-dangle": 0,
+      "react/forbid-prop-types": 0,
+      "jsx-a11y/click-events-have-key-events": 0,
+      "jsx-a11y/no-static-element-interactions": [
+        0,
+        {
+          "handlers": [
+            "onClick",
+            "onMouseDown",
+            "onMouseUp",
+            "onKeyPress",
+            "onKeyDown",
+            "onKeyUp"
+          ]
+        }
+      ],
+      "indent": [
+        2,
+        4,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "react/jsx-indent": [
+        "error",
+        4
+      ],
+      "react/jsx-indent-props": [
+        "error",
+        4
+      ],
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ],
+      "import/no-extraneous-dependencies": [
+        1,
+        {
+          "devDependencies": [
+            "**/*.test.js",
+            "**/*.spec.js"
+          ]
+        }
+      ]
+    },
     "env": {
-        "browser": true,
-        "node": true
+      "browser": true,
+      "node": true
     }
-}
+  }
