--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@tweenjs/tween.js": "^18.5.0",
     "dat.gui": "^0.7.6",
     "eslint-config-airbnb": "^18.0.1",
     "three": "^0.113.2",
