--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
@@ -34,6 +36,7 @@
     "dat.gui": "^0.7.6",
     "eslint-config-airbnb": "^18.0.1",
     "three": "^0.113.2",
-    "three-orbitcontrols": "^2.110.3"
+    "three-orbitcontrols": "^2.110.3",
+    "vue": "^2.6.11"
   }
 }
